trying to fix awkward whitespaces (3)

--- a/themes/lithiumx/static/static/css/main.css
+++ b/themes/lithiumx/static/static/css/main.css
@@ -58,7 +58,7 @@ h6 {
 }
 
 h2 {
-  margin-top: 1.5rem;
+  margin-top: 2.4rem;
 }
 
 h4 {
